--- a/index.css
+++ b/index.css
@@ -45,9 +45,11 @@ header {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
-    padding-top: 40px;
-    background: linear-gradient(to right, #f0fdf4, #fff);
+    /* padding: 10px; */
+    padding-top: 150px;
+    /* background: linear-gradient(to right, #f0fdf4, #fff); */
+    background-color: white;
+    background: radial-gradient(125% 125% at 50% 10%, #ffffff 40%, #2dd4bf 100%);
 }
 
 .left img {
@@ -57,6 +59,8 @@ header {
 
 .right {
     max-width: 50%;
+    z-index: 3;
+    margin-bottom: 40px;
 }
 
 .right h1 {
@@ -109,16 +113,66 @@ header {
     width: 100%;
     padding: 20px;
     text-align: center;
-    background: #e8f5e9;
     color: #1e4620;
     font-weight: 500;
+    background: rgba(255, 255, 255, 0.2);
+    /* Transparent white */
+    /* border-radius: 16px; */
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    /* For Safari */
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    padding: 20px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media(max-width: 768px) {
     .hero {
         flex-direction: column;
         text-align: center;
-        padding: 40px 20px;
     }
 
     .right {
