--- a/index.css
+++ b/index.css
@@ -39,7 +39,8 @@ header {
 }
 
 .hero {
-    height: 440px;
+    min-height: 440px;
+    height: min-content;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -64,26 +65,38 @@ header {
 }
 
 .right h1 {
-    font-size: 2.8rem;
+    font-size: 3.4rem;
     color: #1e1e1e;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .right h1 span {
     color: #2dd4bf;
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .right p {
-    color: #555;
+    color: #1c0e0e84;
     margin-bottom: 30px;
     font-size: 1.2rem;
+    text-align: center;
 }
 
 .cta-button {
+    width: 20vw;
     background-color: #2dd4bf;
     color: white;
     border: none;
     padding: 14px 24px;
+    margin-top: 20px;
     font-size: 16px;
     border-radius: 8px;
     cursor: pointer;
@@ -109,21 +122,24 @@ header {
 }
 
 .hero-bottom {
-    height: 100px;
+    height: min-content;
     width: 100%;
     padding: 20px;
     text-align: center;
     color: #1e4620;
     font-weight: 500;
-    background: rgba(255, 255, 255, 0.2);
+    /* background: rgba(255, 255, 255, 0.2); */
     /* Transparent white */
     /* border-radius: 16px; */
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    /* For Safari */
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.3); */
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
 
