--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     --color-shadow-light: rgba(0, 0, 0, 0.05);
     --color-text-muted: #1c0e0e84;
     --color-white: white;
-    --color-accent-dark: #25642a;
+    --color-accent-dark: #2dac9b;
     --color-shadow-medium: rgba(0, 0, 0, 0.1);
     --color-text-green: #1e4620;
     --color-tab-bg: #e0f6ea;
