--- a/findScheme.css
+++ b/findScheme.css
@@ -47,8 +47,9 @@ form {
 label {
     display: block;
     margin-bottom: 8px;
+    font-size: 16px;
     color: var(--primary-color);
-    font-weight: 500;
+    font-weight: 700;
 }
 
 input,
