--- a/findScheme.css
+++ b/findScheme.css
@@ -21,7 +21,7 @@ body {
     margin: 0 auto;
 }
 
-h1 {
+.container h1 {
     text-align: center;
     color: var(--primary-color);
     margin-bottom: 40px;
