--- a/findScheme.css
+++ b/findScheme.css
@@ -5,9 +5,6 @@
     --background-color: #f8f9fa;
 }
 
-
-
-
 .container {
     /* max-width: 1200px; */
     margin: 0 auto;
@@ -16,7 +13,7 @@
 
 .container h1 {
     text-align: center;
-    color: var(--primary-color);
+    color: #b7e0df;
     margin-bottom: 40px;
     font-size: 2.5rem;
 }
@@ -49,7 +46,8 @@ label {
 
 input,
 select {
-    width: 90%;
+    /* color: black; */
+    max-width: 90%;
     padding: 12px;
     border: 1px solid #ddd;
     border-radius: 6px;
@@ -163,4 +161,18 @@ button:hover {
     background-color: var(--color-white);
     background: radial-gradient(125% 125% at 50% 10%, var(--color-white) 40%, var(--color-accent) 100%);
     z-index: -2;
+}
+
+.search-container {
+    max-width: 400px;
+}
+
+.skiptranslate > span{
+    display: none !important;
+    visibility: hidden !important;
+}
+
+.skiptranslate {
+    color: transparent !important;
+    text-shadow: 0 0 0 var(--color-white) !important;
 }
